where I'm logging inputs into need better orientation

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     </form>
     <ul id="ul"></ul>
     <button onclick="collector()">Submit</button>
+    <!-- love this onclick-->
   </body>
 </html>
