proper button and run function order, need to calculate total sal

--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
         name="jobTitle"
       />
       <input placeholder="annual salary" type="text" id="anSal" name="anSal" />
+      <input
+        placeholder="button"
+        value="click me"
+        type="button"
+        id="submitButton"
+      />
     </form>
+    <!--<button onclick="collector()">Submit</button> -->
+
     <ul id="ul"></ul>
-    <button onclick="collector()">Submit</button>
-    <!-- love this onclick-->
+    <!-- love this onclick, may be an issue though-->
   </body>
 </html>
