changes ul to table for DOM

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </form>
     <!--<button onclick="collector()">Submit</button> -->
 
-    <ul id="ul"></ul>
-    <!-- love this onclick, may be an issue though-->
+    <table id="table"></table>
+    <!-- love this onclick, may be an issue though
+    add styling to table for thick borders and lines-->
   </body>
 </html>
