--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <script src="jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="salary.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Employee Salary Calculator</title>
+    <header><h1>Employee Salary Calculator</h1></header>
   </head>
+
   <body>
     <form class="form" action="/action_page.php">
       <input placeholder="first Name" type="text" id="fname" name="fname" />
@@ -26,6 +29,9 @@
         id="submitButton"
       />
     </form>
+    <div>
+      <h2>Current Employees</h2>
+    </div>
     <!--<button onclick="collector()">Submit</button> -->
 
     <table id="table"></table>
