working to make background red if >20k

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     <table id="table"></table>
     <!-- love this onclick, may be an issue though
     add styling to table for thick borders and lines-->
+    <div id="monthly"></div>
   </body>
 </html>
