it's broken at the moment, wont append input data

--- a/index.html
+++ b/index.html
@@ -35,20 +35,31 @@
         id="submitButton"
       />
     </form>
-    <div>
-      <h2>List Of Current Employees</h2>
-    </div>
+    <h2>List Of Current Employees</h2>
     <!--<button onclick="collector()">Submit</button> -->
-
-    <table id="table"></table>
+    <h1>flex box work below</h1>
+    <!--<div id="table"></div> -->
+    <div id="div">
+      <table class="box">
+        <tr>
+          First-Name
+        </tr>
+        <tr>
+          Last-Name
+        </tr>
+        <tr>
+          ID-Number
+        </tr>
+        <tr>
+          Job-Title
+        </tr>
+        <tr>
+          Annual-Salary
+        </tr>
+      </table>
+    </div>
     <!-- love this onclick, may be an issue though
     add styling to table for thick borders and lines-->
     <div id="monthly"></div>
-    <h1>flex box work below</h1>
-    <div class="flex-container">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-    </div>
   </body>
 </html>
