freaking out, because nothing will append

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="jquery-3.5.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+   <!-- <link rel="stylesheet" type="text/css" href="style.css" />-->
     <script src="salary.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,29 +37,45 @@
     </form>
     <h2>List Of Current Employees</h2>
     <!--<button onclick="collector()">Submit</button> -->
-    <h1>flex box work below</h1>
-    <!--<div id="table"></div> -->
     <div id="div">
-      <table class="box">
-        <tr>
-          First-Name
-        </tr>
-        <tr>
-          Last-Name
-        </tr>
-        <tr>
-          ID-Number
-        </tr>
-        <tr>
-          Job-Title
-        </tr>
-        <tr>
-          Annual-Salary
-        </tr>
-      </table>
+      <tr>
+        First-Name:
+      </tr>
+      <tr>
+        Last-Name:
+      </tr>
+      <tr>
+        ID-Number:
+      </tr>
+      <tr>
+        Job-Title:
+      </tr>
+      <tr>
+        Annual-Salary:
+      </tr>
     </div>
     <!-- love this onclick, may be an issue though
     add styling to table for thick borders and lines-->
-    <div id="monthly"></div>
+    <div id="monthly">
+      <ul></ul>
+    </div>
   </body>
 </html>
+
+<!-- <table id="findME">
+  <tr>
+    <th></th>
+    <th></th>
+  </tr>
+  <tr>
+    <td>first Name</td>
+    <td>last name</td>
+    <td>Id Number</td>
+    <td>Job-Title</td>
+    <td>Annual Salary</td>
+  </tr>
+  <tr>
+    <td>Data Cell 3</td>
+    <td>Data Cell 4</td>
+  </tr>
+</table>
