salvaged and recovered from errors. Not a pretty page though

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="jquery-3.5.1.min.js"></script>
-   <!-- <link rel="stylesheet" type="text/css" href="style.css" />-->
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="salary.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -56,26 +56,9 @@
     </div>
     <!-- love this onclick, may be an issue though
     add styling to table for thick borders and lines-->
-    <div id="monthly">
-      <ul></ul>
-    </div>
+    <ul id="here"></ul>
+    <div id="monthly"></div>
   </body>
 </html>
 
-<!-- <table id="findME">
-  <tr>
-    <th></th>
-    <th></th>
-  </tr>
-  <tr>
-    <td>first Name</td>
-    <td>last name</td>
-    <td>Id Number</td>
-    <td>Job-Title</td>
-    <td>Annual Salary</td>
-  </tr>
-  <tr>
-    <td>Data Cell 3</td>
-    <td>Data Cell 4</td>
-  </tr>
-</table>
+<table class="center"></table>
